added weatherdata Map models to repository

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_challenge
-description: A new Flutter project for the code challenge of Appinio.
+description: Coding challenge for a Job interview application.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
