--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   permission_handler: ^8.1.6
   provider: ^6.0.0
   riverpod: ^0.14.0+3
+  weather_icons: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
