--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  bloc_test: ^8.1.0
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
   equatable: ^2.0.3
   flutter_bloc: ^7.2.0
   flutter_riverpod: ^0.14.0+3
@@ -23,9 +25,14 @@ dependencies:
   weather_icons: ^3.0.0
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+  mockito: ^5.0.16
 
 flutter:
   uses-material-design: true
